Fix project content display on safari browsers

--- a/app/ui/src/Pages/Project/Project.module.scss
+++ b/app/ui/src/Pages/Project/Project.module.scss
@@ -7,6 +7,7 @@
   flex-grow: 1;
   position: relative;
   width: 100%;
+  height: 100%;
   background-color: palette(base, 600);
 
   display: flex;
